MAJ Bandit-Manchot + Build

--- a/site/NSI/Premiere/Projets/BanditManchot/Projet_Bandit_Manchot/index.html
+++ b/site/NSI/Premiere/Projets/BanditManchot/Projet_Bandit_Manchot/index.html
@@ -2803,32 +2803,32 @@
 <tbody>
 <tr>
 <td align="center"><code>777</code></td>
-<td align="right">2000 €</td>
+<td align="right">100 fois la mise</td>
 <td align="left"></td>
 </tr>
 <tr>
 <td align="center"><code>ΩΩΩ</code></td>
-<td align="right">1000 €</td>
+<td align="right">50 fois la mise</td>
 <td align="left"></td>
 </tr>
 <tr>
 <td align="center"><code>♥♥♥</code></td>
-<td align="right">500 €</td>
+<td align="right">20 fois la mise</td>
 <td align="left">On aura de même pour les autres symboles <code>♠</code>, <code>♦</code> et <code>♣</code></td>
 </tr>
 <tr>
 <td align="center"><code>Ω7Ω</code></td>
-<td align="right">300 €</td>
+<td align="right">10 fois la mise</td>
 <td align="left">On aura de même si l'ordre des symboles change</td>
 </tr>
 <tr>
 <td align="center"><code>♠♠7</code></td>
-<td align="right">100 €</td>
+<td align="right">5 fois la mise</td>
 <td align="left">On aura de même si l'ordre des symboles change, et avec les symboles,<code>♥</code> <code>♦</code> et <code>♣</code></td>
 </tr>
 <tr>
 <td align="center"><code>♠Ω7</code></td>
-<td align="right">50 €</td>
+<td align="right">2 fois la mise</td>
 <td align="left">ou pour toute autre série de trois symboles différents</td>
 </tr>
 </tbody>
@@ -2851,7 +2851,7 @@
 <li>La fonction <code>fabriquer_chaine</code> doit fournir une chaîne de caractères de taille <code>taille</code> (par défaut 3), dont tous les caractères sont aléatoirement choisis parmi une liste de caractères <code>symboles</code>. Inutile de réiçnventer l'eau chaude, puisque vous avez déjà fait la question précédente.</li>
 <li>Vous implémenterez ensuite une fonction <code>compte_symboles_identiques</code>, qui prend en argument un caractère <code>s</code>, et qui cherche le nombre d'occurence de ce caractère dans la chaine <code>chaine</code> passée en argument. Les exemples donnés dans la docstring doivent vous aider.</li>
 <li>Vous pourrez ensuite implémenter la fonction <code>presence_symboles_identiques_multiples</code> (pénible à taper ce nom... mais ne le changez pas !) qui prend en argument une liste de symboles <code>symboles</code>, et une chaine de caractères <code>chaine</code>, et qui renvoie <code>True</code> si <strong>un des symboles est présent plusieurs fois dans la chaine</strong>, ou <code>False</code> si ce n'est pas le cas.</li>
-<li>En parallèle (c'est-à-dire que vous pouvez faire cette fonction indépendamment des autres), vous pourrez implémenter la fonction <code>table_gain</code> qui renvoie le gain associé à la chaine passée en argument.</li>
+<li>En parallèle (c'est-à-dire que vous pouvez faire cette fonction indépendamment des autres), vous pourrez implémenter la fonction <code>table_gain</code> qui renvoie le gain associé à la chaine passée en argument, en fonction de la mise de départ.</li>
 <li>En parallèle, vous pourrez implémenter la fonction <code>saisir_mise</code> qui prend en argument une valeur (le pot actuel du joueur/de la joueuse), et renvoie la mise saisie par le joueur/la joueuse.</li>
 <li>En parallèle, vous implémenterez la fonction <code>demander_continuer</code>, qui demande à l'utilisateur·trice si il souhaite refaire une nouvelle manche de jeu, et renvoie un booléen correspondant à la réponse.</li>
 <li>En parallèle, vous implémenterez une fonction <code>afficher_bandit</code> sans valeur de retour, qui affiche dans la console le bandit-manchot ainsi que le gain correspondant. Vous pouvez vous inspirer de la fonction <code>presentation</code> qui vous est fournie.</li>
