--- a/site/SNT/College/PixelArt/index.html
+++ b/site/SNT/College/PixelArt/index.html
@@ -2789,18 +2789,18 @@
 <p>Ouvrez l'explorateur de fichier <code>windows</code>, puis allez dans le dossier <code>Images</code>. Créez un sous-dossier avec votre nom et prénom. Ce dossier sera celui dans lequel vous devrez copier <strong>tous les fichiers de cette activité</strong>.</p>
 </li>
 <li>
-<p>Rendez-vous sur le site <a href="https:\www.zonensi.fr">www.zonensi.fr</a>, et cliquez sur <code>Activite Pixel Art</code>. Enregistrez tous les fichiers suivants dans votre dossier personnel.</p>
+<p>Rendez-vous sur le site <a href="https:\www.zonensi.fr">www.zonensi.fr</a>, menu <code>SNT</code> et cliquez sur <code>&gt; Session Collège</code>. Enregistrez tous les fichiers suivants dans votre dossier personnel.</p>
 <ul>
-<li><a href="https://fvergniaud-drive.mytoutatice.cloud/public?sharecode=bqphfzyLT0yK" target="_blank">PixelArt.py</a></li>
-<li><a href="https://fvergniaud-drive.mytoutatice.cloud/public?sharecode=wov9s1safq67" target="_blank">makeMatrix.py</a></li>
-<li><a href="https://fvergniaud-drive.mytoutatice.cloud/public?sharecode=Eq1v3AzO0X7d" target="_blank">bigMatrix.txt</a></li>
+<li><a href="../pixelArt.py" target="_blank">PixelArt.py</a></li>
+<li><a href="../makeMatrix.py" target="_blank">makeMatrix.py</a></li>
+<li><a href="../bigMatrix.txt" target="_blank">bigMatrix.txt</a></li>
 </ul>
 </li>
 </ol>
 <h2 id="du-pixel-art-en-noir-et-blanc">Du Pixel Art en Noir et Blanc</h2>
 <div class="admonition info">
 <p class="admonition-title">Pixels et tableaux de nombres</p>
-<p>Une image numérique est composée de pixels. Ces pixels sont les plus petites &laquo; lampes&raquo; allumables par l'ordinateur. Pour demander à l'ordinateur d'allumer un pixel, on lui donne une valeur numérique. Une image numérique est donc représentée dans un ordinateur par un tableau de nombres, appelé <mark class="critic"><strong>matrice</strong></mark> en français  (<em>matrix</em> en anglais).</p>
+<p>Une image numérique est composée de pixels. Ces pixels sont les plus petites &laquo; lampes &raquo; allumables par l'ordinateur. Pour demander à l'ordinateur d'allumer un pixel, on lui donne une valeur numérique. Une image numérique est donc représentée dans un ordinateur par un tableau de nombres, appelé <mark class="critic"><strong>matrice</strong></mark> en français  (<em>matrix</em> en anglais).</p>
 </div>
 <ol>
 <li>
