--- a/site/index.html
+++ b/site/index.html
@@ -2778,7 +2778,7 @@
                 
 
 
-<h1 id="mathssntnsi-dans-un-petit-breton">Maths/SNT/NSI dans un petit Breton</h1>
+<h1 id="mathssntnsi-dans-un-petit-breton">Maths/SNT/NSI dans un petit Lycée Breton</h1>
 <canvas id = "canvas" width = "500" height = "300">
 </canvas>
 <script src ="canvas.js">
