--- a/site/SNT/Web/CSS/index.html
+++ b/site/SNT/Web/CSS/index.html
@@ -3866,8 +3866,8 @@
 <li>Qu'ont en commun toutes les zones changées ?</li>
 </ol>
 </li>
-<li>Dans la fenêtre de style, modifiez <code>Liste Puce 1</code> en ajoutant une lettrine, et en ajoutant au fond un dégradé de tpe <code>Radial</code>. Observez les modifications du document.</li>
-<li>Allez à la page 31, partie 5.2.c,  sélectionnez les éléments de la liste à puce, et changez le style de celle-ci, qui est actuellement en <code>Liste Puce 1</code>, en <code>Liste Puce 2</code>. le texte at-il été changé ?</li>
+<li>Dans la fenêtre de style, modifiez <code>Liste 1</code> en ajoutant une lettrine, et en ajoutant au fond un dégradé de tpe <code>Radial</code>. Observez les modifications du document.</li>
+<li>Allez à la page 18, sélectionnez les éléments de la liste à puce, et changez le style de celle-ci, qui est actuellement en <code>Liste 1</code>, en <code>Liste 2</code>. le texte at-il été changé ?</li>
 </ol>
 </div>
 <div class="admonition info">
