--- a/site/SNT/Web/Bases_HTML/index.html
+++ b/site/SNT/Web/Bases_HTML/index.html
@@ -4631,6 +4631,7 @@
 <p class="admonition-title">Pour avoir une bonne note !</p>
 <p>On respectera aussi les recommandations suivantes :</p>
 <ul>
+<li>Le code HTML devra être vérifié et ne comporter aucune erreur. Pour le vérifier, vous pouvez le copier-coller sur le site <a href="https://validator.w3.org/#validate_by_input" target="_blank">W3C Validator</a>. Si vous ne comprenez pas certaines erreurs, n'hésitez pas à me demander !</li>
 <li>Un soin particulier sera apporté à l'orthographe. Si vous n'êtes pas certains de votre orthographe ou de votre syntaxe, vous devez passer votre texte dans un correcteur orthographique en ligne tel que <a href="https://www.scribens.fr/" target="target">Scribens</a>.</li>
 <li>Le copié-collé depuis un autre site doit impérativement mentionner l'origine du texte. Sans ces sources citées, vous pourriez être accusé de plagiat.</li>
 <li>De même l'origine des images ou des vidéos doit être explicitement donné dans le site, soit sous la forme d'infobulles, soit sous la forme d'un commentaire d'image (balises <code>&lt;figure&gt;</code> et <code>&lt;figcaption&gt;</code>, voir <a href="https://developer.mozilla.org/fr/docs/Web/HTML/Element/figcaption" target="_blank">ici</a>).</li>
