MAJ après fusion

--- a/site/Maths/Seconde/AlgoBases/AffectationTypes/index.html
+++ b/site/Maths/Seconde/AlgoBases/AffectationTypes/index.html
@@ -4424,7 +4424,7 @@ sur des textes), ou encore sur d'autres types de données (musiques, images, ou 
 <p>Si le quotient de <span class="arithmatex">\(x\)</span> par <span class="arithmatex">\(2\)</span> est inférieur à <span class="arithmatex">\(1\)</span>, on arrête l'algorithme.</p>
 </li>
 </ol>
-<p>Appliquer cet algorithme sur les nombres <span class="arithmatex">\(15\)</span>, <span class="arithmatex">\(57\)</span> puis 312$. Quelles sont les valeurs finales obtenus par <span class="arithmatex">\(p\)</span> à chaque fois ?</p>
+<p>Appliquer cet algorithme sur les nombres <span class="arithmatex">\(15\)</span>, <span class="arithmatex">\(57\)</span> puis <span class="arithmatex">\(312\)</span>. Quelles sont les valeurs finales obtenus par <span class="arithmatex">\(p\)</span> à chaque fois ?</p>
 </div>
 <div class="tabbed-block">
 <p>On obtient <span class="arithmatex">\(p = 3\)</span>.</p>
