Ajout test Hanoi

--- a/site/NSI/Terminale/C03/ToursHanoi/index.html
+++ b/site/NSI/Terminale/C03/ToursHanoi/index.html
@@ -4437,12 +4437,13 @@
 <li>on ne peut pas placer un disque sur un disque de diamètre inférieur.</li>
 </ul>
 <p><img alt="Tour_Hanoi_1.png" src="../Tour_Hanoi_1.png" style="width:50%; margin:auto;display:block;background-color: #d2dce0;"></p>
+<p>Voici un site vous permettant de tester le jeu : <a href="http://championmath.free.fr/tourhanoi.htm" target="_blank">Tour de Hanoi</a></p>
+<h2 id="algorithme-de-resolution-non-recursif">Algorithme de résolution non-récursif</h2>
 <p>On souhaite écrire un programme python non-récursif qui utilise une classe <code>Pile</code> telle que définie dans le cours précédent (avec les listes chainées), et qui devra :</p>
 <ol>
 <li>Permettre de saisir un nombre <code>n</code> de disques.</li>
 <li>Afficher à l'écran les différentes étapes pour résoudre le problème avec <code>n</code> disques, en précisant à chaque fois le nombre d'étapes nécessaires.</li>
 </ol>
-<h2 id="algorithme-de-resolution-non-recursif">Algorithme de résolution non-récursif</h2>
 <p>Si on observe de près le jeu pour un nombre de disques supérieur à 1, on s'aperçoit qu'il n'y a que 1 ou 2 déplacements possibles :</p>
 <ul>
 <li>le petit disque peut <strong>toujours</strong> se déplacer sur les deux autres tours.</li>
