--- a/site/NSI/Terminale/C04/BasesSQL2/index.html
+++ b/site/NSI/Terminale/C04/BasesSQL2/index.html
@@ -4664,7 +4664,7 @@ En effet la clause <code>DISTINCT</code> élimine les lignes exactement identiqu
 <h2 id="application">Application</h2>
 <div class="admonition question">
 <p class="admonition-title">Exercice</p>
-<p>Effectuer la première partie ainsi que les requêtes <strong>sans jointures</strong> du notebook <a href="https://capytale2.ac-paris.fr/web/c/917a-165474" target="_blank">jeux olympiques</a>(Code <code>917a-165474</code>) (merci M. Leleu).</p>
+<p>Effectuer la première partie ainsi que les requêtes <strong>sans jointures</strong> du notebook <a href="https://capytale2.ac-paris.fr/web/c/062e-4748066" target="_blank">jeux olympiques</a>(Code <code>062e-4748066</code>) (merci M. Leleu).</p>
 </div></div>
 
 
